# VSTExample

./: CMakeLists.txt  LICENSE  Makefile  README.md  _config.yml
.github/workflows/: build_on_push.yml
Source/: Audio.h  CMakeLists.txt  Config.h  Controller.h  Midi.h  Processor.cpp  Processor.h  Synth.h  controller.cpp  entry.cpp  factory.cpp  ids.h  main.cpp  plugin.cpp  processor.cpp
cmake/: MacVST3Info.plist.in
